margins added between icons in tablet mode

--- a/details-template.html
+++ b/details-template.html
@@ -31,7 +31,7 @@
     <main>
         <div class="oups">
             <img src="https://previews.123rf.com/images/arcady31/arcady311102/arcady31110200028/8885322-oups-ic%C3%B4ne.jpg" alt="oups">
-            <h2 class="bold m-1 p-1">Sorry this page is not available now</h2>
+            <h2 class="normal m-1 p-1">Sorry this page is not yet available</h2>
             <a class="capitalize home-btn" href="index.html">go home</a>
         </div>
     </main>
@@ -43,7 +43,7 @@
                 <span><a href="#">search</a></span>
                 <span><a href="#">about us</a></span>
                 <span><a href="#">advertise</a></span>
-                <span class="icon__main"><a href="#"><i class="fas fa-street-view fa-4x"></i></a></span>
+                <span class="icon__main"><a href="index.html"><i class="fas fa-street-view fa-4x"></i></a></span>
                 <span><a href="#">facebook</a></span>
                 <span><a href="#">twitter</a></span>
                 <span><a href="#">blog</a></span>
