--- a/details.html
+++ b/details.html
@@ -61,7 +61,7 @@
                 <span><a href="#">search</a></span>
                 <span><a href="#">about us</a></span>
                 <span><a href="#">advertise</a></span>
-                <span class="icon__main"><a href="#"><i class="fas fa-street-view fa-4x"></i></a></span>
+                <span class="icon__main"><a href="index.html"><i class="fas fa-street-view fa-4x"></i></a></span>
                 <span><a href="#">facebook</a></span>
                 <span><a href="#">twitter</a></span>
                 <span><a href="#">blog</a></span>
