--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <div class="four">
                     <span><i class="fab fa-angellist fa-2x"></i></span>
                     <p class="four__title uppercase bold">4-enjoy</p>
-                    <p class="four__text">Now you can just enjoy and share your favorite event to your friend and invite
-                        them to be toghether at the event.</p>
+                    <p class="four__text">Now you can just enjoy and share your favorite event with your friend and invite
+                        them to participate with you.</p>
                 </div>
             </div>
         </section>
@@ -129,7 +129,7 @@
                 <span><a href="#">search</a></span>
                 <span><a href="#">about us</a></span>
                 <span><a href="#">advertise</a></span>
-                <span class="icon__main"><a href="#"><i class="fas fa-street-view fa-4x"></i></a></span>
+                <span class="icon__main"><a href="index.html"><i class="fas fa-street-view fa-4x"></i></a></span>
                 <span><a href="#">facebook</a></span>
                 <span><a href="#">twitter</a></span>
                 <span><a href="#">blog</a></span>
