shadow added of result box

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/main.css">
-    <link rel="stylesheet" href="stylesheets/details-template.css">
+    <link rel="stylesheet" href="stylesheets/404.css">
     <script src="https://kit.fontawesome.com/99ec583b17.js" crossorigin="anonymous"></script>
     <title>Template</title>
 </head>
@@ -20,10 +20,10 @@
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
                         href="result.html">coming soon</a></span>
-                <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
-                    class="uppercase d-none"><a href="details-template.html">blog</a></span>
-                <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
-                    class="uppercase d-none"><a href="details-template.html">more</a></span>
+                <span class="uppercase"><a href="404.html"><i class="fas fa-rss fa-lg"></i></a></span><span
+                    class="uppercase d-none"><a href="404.html">blog</a></span>
+                <span class="uppercase"><a href="404.html"><i class="fas fa-bars fa-lg"></i></a></span><span
+                    class="uppercase d-none"><a href="404.html">more</a></span>
             </div>
         </nav>
     </header>
