--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <span class="uppercase"><a href="result.html"><i
                             class="fa fa-search-location fa-lg"></i></a></span><span class="uppercase d-none"><a
                         href="result.html">coming soon</a></span>
-                <span class="uppercase"><a href="details-template.html"><i class="fas fa-rss fa-lg"></i></a></span><span
-                    class="uppercase d-none"><a href="details-template.html">blog</a></span>
-                <span class="uppercase"><a href="details-template.html"><i class="fas fa-bars fa-lg"></i></a></span><span
-                    class="uppercase d-none"><a href="details-template.html">more</a></span>
+                <span class="uppercase"><a href="404.html"><i class="fas fa-rss fa-lg"></i></a></span><span
+                    class="uppercase d-none"><a href="404.html">blog</a></span>
+                <span class="uppercase"><a href="404.html"><i class="fas fa-bars fa-lg"></i></a></span><span
+                    class="uppercase d-none"><a href="404.html">more</a></span>
             </div>
         </nav>
 
