changed color on footer links and form

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main>
         <section id="works">
-            <h3 class="works__title uppercase orange">follow these simple steps to have a good experience using mapaan
+            <h3 class="works__title uppercase orange">follow these simple steps to have the best experience using mapaan
             </h3>
             <div class="one-two">
                 <div class="one">
